[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/joystick/joystick.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/sp/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://gameplay/sp/ui/gui/gui.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/sp/ui/battle_end/battle_end.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/sp/ui/unlocked_notification/unlocked_notification.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/menu/menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/simple_dialog_option/simple_dialog_option.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/SafeArea/SafeArea.gd" type="Script" id=8]
[ext_resource path="res://assets/ui/hurt/hurt.tscn" type="PackedScene" id=9]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SafeArea" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 8 )

[node name="gui" parent="CanvasLayer/SafeArea" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 1024.0

[node name="joystick" parent="CanvasLayer/SafeArea" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 1024.0

[node name="battle_end" parent="CanvasLayer/SafeArea" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 1024.0

[node name="menu" parent="CanvasLayer/SafeArea" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 1024.0

[node name="simple_dialog_on_exit" parent="CanvasLayer/SafeArea" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 2

[node name="hurt" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="unlocked_notification" parent="CanvasLayer" instance=ExtResource( 5 )]

[connection signal="on_menu_press" from="CanvasLayer/SafeArea/gui" to="." method="_on_gui_on_menu_press"]
[connection signal="on_joystick_input" from="CanvasLayer/SafeArea/joystick" to="." method="_on_joystick_on_joystick_input"]
[connection signal="on_credit_press" from="CanvasLayer/SafeArea/battle_end" to="." method="_on_battle_end_on_credit_press"]
[connection signal="on_next_mission_press" from="CanvasLayer/SafeArea/battle_end" to="." method="_on_battle_end_on_next_mission_press"]
[connection signal="on_restart_mission_press" from="CanvasLayer/SafeArea/battle_end" to="." method="_on_battle_end_on_restart_mission_press"]
[connection signal="on_main_menu_press" from="CanvasLayer/SafeArea/menu" to="." method="_on_menu_on_main_menu_press"]
[connection signal="on_yes" from="CanvasLayer/SafeArea/simple_dialog_on_exit" to="." method="_on_simple_dialog_on_exit_on_yes"]
